--- a/SlackGithub/SlackGithub/packages.config
+++ b/SlackGithub/SlackGithub/packages.config
@@ -7,6 +7,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
-  <package id="SlackAPI" version="1.0.5.93" targetFramework="net452" />
+  <package id="SethCoussens.Slack.SlackWebApiClient" version="1.0.10" targetFramework="net462" />
 </packages>
