Use adapter and more improvements

--- a/SlackGithub/SlackGithub/Web.config
+++ b/SlackGithub/SlackGithub/Web.config
@@ -4,15 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="AzureConnectionString" connectionString="REPLACED" />
+  </connectionStrings>
   <appSettings />
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.6.2" />
-      </system.Web>
-  -->
+  <add key="SlackAuthKey" value="REPLACED"/>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.5.2" />
